# CS181-project-splendor

./: CMakeLists.txt  Card.cpp  README.md  basic_lighting.cpp  card_manager.cpp  data_gen.ipynb  main.cpp  test.cpp
env/include/: game.h  splendor.h
env/src/: game.cpp  splendor.cpp
include/: game.h  greedyAgent.h  humanAgent.h  minimaxAgent.h  qLearningAgent.h  randomAgent.h  splendor.h  util.hpp
learnopengl/: camera.h
opengl/: CMakeLists.txt
opengl/glad/: CmakeLists.txt
opengl/glad/include/glad/: glad.h
opengl/glad/src/: glad.c
opengl/glfw/: CMakeLists.txt
opengl/include/: buffers.hpp  camera.hpp  card_manager.hpp  coin_manager.hpp  game_object.hpp  movement.hpp  nobility_manager.hpp  object_base.hpp  render_manager.hpp  shader.hpp  table.hpp  textures.hpp  utils.hpp  visualization.hpp  window_manager.hpp
opengl/shader/: 2.2.basic_lighting.fs  2.2.basic_lighting.vs  basic_lighting.fs  card_fragment.glsl  card_front.fs  card_front.vs  card_side.fs  card_side.vs  card_vertex.glsl
opengl/src/: camera.cpp  game_object.cpp  shader.cpp  window_manager.cpp
opengl/stb_image/: CMakeLists.txt  stb_image.cpp
qTrainingLog/: 1.0.txt  1.txt  2.txt  3.txt
src/: game.cpp  greedyAgent.cpp  humanAgent.cpp  minimaxAgent.cpp  qLearningAgent.cpp  randomAgent.cpp  splendor.cpp
